tests/parser/nested_functions/invalid_02.m
% (c) Copyright 2019 Florian Schanda

function invalid_02
  potato
  function potato
    disp potato;
  end
